fixed z-index for texture layer

--- a/css/style.css
+++ b/css/style.css
@@ -73,6 +73,7 @@ h6:first-letter {
 		height: 100%;
 		background-image: url(../images/halftone/halftone-transparent.png);
 		pointer-events: none;
+		z-index: 100;
 	}
 
 .readable {
